# kockandur

./: ProjectHome.md  jegyzetek.txt
Aranyositator/: Aranyositator  Aranyositator.pro  Makefile  arany_scene.cpp  arany_scene.h  aranyositator.cpp  aranyositator_widget.cpp  aranyositator_widget.h
DeepWhite/: sample.sgf
DeepWhite/src/: CMakeLists.txt  deepwhite_main.cpp  mainwindow.h
DeepWhite/src/exceptions/: exceptions.h
DeepWhite/src/goban_widget/: goban_widget.h
DeepWhite/src/sgf_parser/: parser_main.cpp  parser_main.h  sgf_collection.cpp  sgf_collection.h  sgf_node.cpp  sgf_node.h  sgf_property.h  sgf_tree.cpp  sgf_tree.h
Emacs/: .emacs
Mesterséges intelligencia/: mi.aux  mi.tex  mi.tex.backup
Proba/: Makefile  Proba.cpp  filter.cl
Szabályozástechnika/: szabtech_jegyzet.tex
Számítógépes Grafika/Nagyhazi/: main.cpp  makefile
trunk/Aranyositator/: Aranyositator  Aranyositator.pro  Makefile  arany_scene.cpp  arany_scene.h  aranyositator.cpp  aranyositator.h  aranyositator_widget.cpp  main.cpp  moc_aranyositator.cpp
trunk/DeepWhite/src/: CMakeLists.txt  deepwhite_main.cpp  goban_widget.h  mainwindow.cpp
trunk/DeepWhite/src/exceptions/: exceptions.h
trunk/DeepWhite/src/goban_widget/: goban_widget.cpp  goban_widget.h
trunk/DeepWhite/src/sgf_parser/: CMakeLists.txt  parser_main.cpp  parser_main.h  sgf_collection.cpp  sgf_collection.h  sgf_node.h  sgf_sequence.cpp  sgf_tree.cpp  sgf_tree.h
trunk/Mesterséges intelligencia/: mi.tex  mi.tex.backup
trunk/Proba/: Makefile  Proba.cpp  filter.cl  filter.h  my-opencv-prgm.c  test.ppm
(+5 files in other folders)
